<resources>

    <string name="app_name">プロトタイプ</string>

    <string name="item_entry">アイテム登録</string>
    <string name="item_check">アイテム確認</string>
    <string name="item_search">アイテム検索</string>
    <string name="wear_report">コーディネート登録</string>

    <string name="item_entry_camera">撮影</string>
    <string name="item_entry_gallery">画像選択</string>

    <string name="property_input">詳細入力</string>

    <string name="category">カテゴリー</string>
    <string-array name="category_list">
        <item>トップス</item>
        <item>アウター</item>
        <item>パンツ</item>
        <item>スカート</item>
        <item>ワンピース</item>
        <item>ソックス</item>
        <item>シューズ</item>
        <item>バッグ</item>
        <item>小物</item>
        <item>アクセサリー</item>
        <item>帽子</item>
        <item>その他</item>
    </string-array>

    <string name="color">色</string>
    <string-array name="color_list">
        <item>白</item>
        <item>黒</item>
        <item>赤</item>
        <item>黄</item>
        <item>オレンジ</item>
        <item>緑</item>
        <item>青</item>
        <item>紺</item>
        <item>その他</item>
    </string-array>

    <string name="size">サイズ</string>
    <string-array name="size_list">
        <item>SS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>LL</item>
        <item>22</item>
        <item>22.5</item>
        <item>23</item>
        <item>23.5</item>
        <item>24</item>
        <item>24.5</item>
        <item>25</item>
        <item>25.5</item>
        <item>26</item>
        <item>26.5</item>
        <item>27</item>
        <item>27.5</item>
        <item>28</item>
        <item>28.5</item>
        <item>29</item>
        <item>その他</item>
    </string-array>

    <string name="brand">ブランド</string>

    <string name="purchase_date">購入日</string>
    <string name="calender">カレンダー表示</string>

    <string name="price">値段</string>

    <string name="entry">登録</string>

    <string name="search">検索</string>
    <string name="reset">リセット</string>
    <string name="search_method">検索方法</string>
    <string name="category_search">カテゴリー検索</string>
    <string name="color_search">色検索</string>
    <string name="brand_search">ブランド検索</string>
    <string name="purchase_date_search">購入日検索</string>
    <string name="price_search">値段検索</string>

</resources>
