<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.umeta.prototype.PropertyInputActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/parts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/parts_list"
                android:spinnerMode="dropdown"
                android:textSize="30sp"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/colors_list"
                android:spinnerMode="dropdown"
                android:textSize="30sp"></Spinner>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/brand_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <Button
            android:id="@+id/entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/entry" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
